2010-09-16  David Bateman  <dbateman@free.fr>

	* graphics.cc (static Matrix screen_size_pixels (void), static Matrix
	papersize_from_type (const caseless_str, const caseless_str))): New
	functions.
	(void figure::properties::set_paperunits (const octave_value&),
	void figure::properties::set_papertype (const octave_value&),
	void figure::properties::update_paperunits (const caseless_str&))
	void figure::properties::update_papertype (void),
	void figure::properties::update_papersize (void),
	void figure::properties::update_units (const caseless_str&)): New
	methods of the figure class.
	(void axes::properties::set_units (const octave_value&),
	void axes::properties::update_units (const caseless_str&),
	void axes::properties::set_fontunits (const octave_value&),
	void axes::properties::update_fontunits (const caseless_str&)):
	New methods of the axes class.
	* graphics.h.in (void figure::properties::update_paperunits
	(const caseless_str&), void figure::properties::update_units
	(const caseless_str&)): Declaration of new figure methods.
	(void figure::properties::update_paperunits (const caseless_str&),
	void figure::properties::update_units (const caseless_str&)):
	Declaration of new axes methods.

2010-09-16  John P. Swensen  <jpswensen@gmail.com>

	* DLD-FUNCTIONS/))magick_read__.cc (write_image): Remove
	unnecessary for loop to set image format.

2010-09-16  John W. Eaton  <jwe@octave.org>

	* DLD-FUNCTIONS/svd.cc (Fsvd): Delete assert to avoid
	"comparison is always false due to limited range of data type"
	warning from GCC.

	* utils.cc (octave_vsnprintf): Declare nchars volatile to avoid
	GCC warning.

	* pr-output.cc (octave_print_internal): Avoid uninitialized
	variable warning from GCC.

2010-09-16  John Swensen  <jpswensen@gmail.com>

	* DLD-FUNCTIONS/__magick_read__.cc (write_image): Allow
	arbitrary extensions with format specifier.

2010-09-15  John W. Eaton  <jwe@octave.org>

	* load-path.cc (Faddpath, Frmpath): Document path arguments.
